--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,7 @@
   "semi": true,
   "singleQuote": false,
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindFunctions": ["clsx"]
 }
