--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,6 +4,7 @@
   "singleQuote": false,
   "tabWidth": 2,
   "useTabs": false,
+  "endOfLine": "auto",
   "plugins": ["prettier-plugin-tailwindcss"],
   "tailwindFunctions": ["clsx"]
 }
