feat: react-router added with layout

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,7 +23,9 @@
     "noUncheckedSideEffectImports": true,
     "baseUrl": "./",
     "paths": {
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@pages/*": ["src/pages/*"]
     }
   },
   "include": ["src"]
