--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "editor.formatOnSave": true, // Enable formatting on save
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true // Automatically fix ESLint issues on save
+    "source.fixAll.eslint": "explicit"
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "eslint.validate": [
