NAADS-2604 : health checks

--- a/infrastructure/chart/values.yaml
+++ b/infrastructure/chart/values.yaml
@@ -34,8 +34,8 @@ basePath:
   - "/managerui"
 
 checks:
-  health: "/"
-  ready: "/"
+  health: "/healthz"
+  ready: "/healthz"
 
 additionalConfigmaps: |
   apiVersion: v1
