feat: AuthProvider added

--- a/app/.env.production
+++ b/app/.env.production
@@ -1,1 +1,4 @@
 VITE_APP_TITLE=Alert Ready - Manager
+VITE_OKTA_DOMAIN=login-integration.alertready.ca
+VITE_OKTA_CLIENT_ID=TMDOKnRtpFBuWx0uLxRfF8vchfkK6yKl
+VITE_OKTA_AUDIENCE=https://pelmorex-alertready-dev.ca.auth0.com/api/v2/
