--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "start": "vite preview --port 8080"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "react": "^18.3.1",
