--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,7 +24,7 @@ RUN cat /home/node/app/.npmrc
 RUN node --version
 RUN npm --version
 
-RUN npm install --verbose && npm run build
+RUN npm ci --verbose && npm run build
 
 
 # For consitency we remove the .npmrc file even though it won't be copied to production image
