--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,7 +32,8 @@ RUN rm /home/node/app/.npmrc
 
 FROM $DOCKER_REGISTRY/node:22-alpine3.19
 WORKDIR /home/node/app
-COPY --from=appbuilder /home/node/app .
+#COPY --from=appbuilder /home/node/app .
+COPY --from=appbuilder /home/node/app/dist ./dist
 
 RUN chown -R node:node /home/node/app
 # RUN ls -la
