NAADS-0: updating the docker file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,8 +32,7 @@ RUN rm /home/node/app/.npmrc
 
 FROM $DOCKER_REGISTRY/node:22-alpine3.19
 WORKDIR /home/node/app
-#COPY --from=appbuilder /home/node/app .
-COPY --from=appbuilder /home/node/app/dist ./dist
+COPY --from=appbuilder /home/node/app .
 
 RUN chown -R node:node /home/node/app
 # RUN ls -la
