NAADS-2608 : Added health end point

--- a/infrastructure/chart/values.yaml
+++ b/infrastructure/chart/values.yaml
@@ -34,8 +34,8 @@ basePath:
   - "/"
 
 checks:
-  health: "/healthz"
-  ready: "/healthz"
+  health: "/api/healthz"
+  ready: "/api/healthz"
 
 additionalConfigmaps: |
   apiVersion: v1
